--- a/lists/l1.md
+++ b/lists/l1.md
@@ -4,5 +4,6 @@ title: Task List 1
 ---
 
 Do not clone it by hand if you are invited to a GitHub Classroom
-(Repository)[https://github.com/puma-wust/l1-2019]
+
+[Repository](https://github.com/puma-wust/l1-2019)
 
